fix: Prevent calculator to overflow the section
The content section (calculator parent) had align-center set on center.
It removes its flex items vertical limit unless the item has a fixed
height.

Problem solved setting a height limit to the calculator (the flex item).

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ body {
   background-color: var(--secondary-color);
   border: 0.3rem solid var(--main-color);
   border-radius: 0.5rem;
+  height: 100%;
   padding: 0.5rem;
   display: inline-flex;
   flex-direction: column;
